Chapter_3/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Domain__c</fullName>
        <formula>/* Gets contact’s email address and outputs a domain url based on email’s domain*/
&quot;www.&quot; + RIGHT(Email, LEN(Email) - FIND(&quot;@&quot;, Email) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Padding__c</fullName>
        <formula>LPAD(Email, 60, &apos;&gt;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Padding</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Social__c</fullName>
        <formula>HYPERLINK(
  &quot;https://twitter.com/&quot; &amp; Twitter_Handle__c,
  IMAGE(
&quot;https://upload.wikimedia.org/wikipedia/it/0/09/Twitter_bird_logo.png&quot;,
  Twitter_Handle__c, 
  50, 
  50)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Social</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_Handle__c</fullName>
        <label>Twitter Handle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>